@@ -1,4 +1,8 @@
-	
+
+	- Paradigm-book support; an attendee can view all of a given tournament's
+	  paradigms or download them into a PDF file for tourneys where there is no
+	  internet access available.
+
 	- Sweepstakes are rejiggered so you can run the report either for each
 	  individual sub-category or you can see the whole combined points. So
 	  places like NY state which count 3 entries from 3 separate groupings,
